# image_compression_app

./: CMakeLists.txt  Main.qml  README.md  buttonsignalshandling.cpp  buttonsignalshandling.h  convertimage.cpp  convertimage.h  file_input.cpp  file_input.h  getfilepath.cpp  getfilepath.h  links.txt  main.cpp  processedimage.cpp  processedimage.h  restoredimage.cpp  restoredimage.h
resources/left_side/: LeftSide.qml
resources/right_side/: RightSide.qml
